rendered/envs/alpha/kasha/deployment-kasha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: kasha
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kasha
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kasha
    spec:
      containers:
        - env:
            - name: KASHA_DATA
              value: /kasha
            - name: KASHA_LISTEN
              value: 0.0.0.0:5000
            - name: KASHA_TRUSTED_KEYS
              value: |
                cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= kasha-ci-1:KNW/sz+Zz800U/IFZ38vH5rvlHtM3Fb0Q/wmDJquG+U= znix.zebradil.dev:nvr0OQFRddbHGopQbyLbLXQnntFBDKp23tqQq+msppw= cache.flakehub.com-3:hJuILl5sVK4iKm86JzgdXW12Y2Hwd5G07qKtHTOcDCM= cache.flakehub.com-4:Asi8qIv291s0aYLyH6IOnr5Kf6+OF14WVjkE6t3xMio= cache.flakehub.com-5:zB96CRlL7tiPtzA9/WKyPkp3A2vqxqgdgyTVNGShPDU= cache.flakehub.com-6:W4EGFwAGgBj3he7c5fNh9NkOXw0PUVaxygCVKeuvaqU= cache.flakehub.com-7:mvxJ2DZVHn/kRxlIa [...]
            - name: KASHA_REMOTE
              value: ref+sops://static/0.sops.yaml#/cache-s3-url+
            - name: KASHA_SYNC_INTERVAL
              value: "300"
          image: oci.zebradil.dev/ghcr.io-cache/zebradil/kasha-box@sha256:33842786441aae95f5e0f31c41cf6aa1d67d084d594154e75a2efc49f4a179da
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /nix-cache-info
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          name: kasha
          ports:
            - containerPort: 5000
              name: http
          readinessProbe:
            httpGet:
              path: /nix-cache-info
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              memory: 3Gi
            requests:
              cpu: 300m
              memory: 1300Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
          volumeMounts:
            - mountPath: /kasha
              name: kasha
      volumes:
        - name: kasha
          persistentVolumeClaim:
            claimName: kasha
