rendered/envs/alpha/kasha/ingressroute-kasha.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: kasha
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`kasha.lan.zebradil.dev`) || Host(`kasha.junior.lan.zebradil.dev`)
      services:
        - name: kasha
          port: http
